--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="page-header">
       <nav class="page-navigation">
         <a class="page-header-logo">
-          <img src="img/nerds-logo.svg" width="159.87" height="65.02" alt="Логотип дизайн-студии «Nёrd's»">
+          <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип дизайн-студии «Nёrd's»">
         </a>
         <div class="page-navigation-wrapper">
           <div class="container">
@@ -142,9 +142,10 @@
     </section>
 
     <section class="footer-social">
+      <h2>Давайте дружить!</h2>
       <ul class="social-list">
         <li class="social-item">
-          <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26.01" height="15" alt="Логотип Вконтакте">Вконтакте</a>
+          <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Логотип Вконтакте">Вконтакте</a>
         </li>
         <li class="social-item">
           <a class="social-button" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Фейсбук">Фейсбук</a>
