--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <li><a href="blank.html">Контакты</a></li>
             </ul>
           <div class="user-navigation">
-        <a class="cart-link" href="blank.html"><img src="img/cart-icon.svg" width="15" height="15" alt="Корзина">Корзина</a>
+        <a class="cart-link" href="blank.html">Корзина</a>
           </div>
           </div>
         </div>
