Добавление отступов секциям на главной странице

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
               <li><a href="catalog.html">Магазин</a></li>
               <li><a href="blank.html">Контакты</a></li>
             </ul>
-          <div class="user-navigation">
-        <a class="cart-link" href="blank.html">Корзина</a>
-          </div>
+            <div class="user-navigation">
+              <a class="cart-link" href="blank.html">Корзина</a>
+            </div>
           </div>
         </div>
       </nav>
@@ -34,10 +34,10 @@
     <main>
       <div class="main-features">
         <div class="container">
-          <h1>Дизайн-студия «Nёrd's»</h1>
+          <h1 hidden>Дизайн-студия «Nёrd's»</h1>
 
           <section class="features">
-            <h2>Преимущества</h2>
+            <h2 hidden>Преимущества</h2>
             <ul class="features-list">
               <li class="feature-item">
                 <h3>Долго, дорого, скрупулезно.</h3>
@@ -64,7 +64,7 @@
 
       <div class="container">
       <section class="services">
-        <h2>Услуги</h2>
+        <h2 hidden>Услуги</h2>
         <ul class="services-list">
         <li class="services-item">
           <img src="img/laptop.png" width="300" height="146" alt="Ноутбук на красном фоне">
@@ -89,9 +89,9 @@
 
       <div class="index-column">
       <section class="company">
-        <h2>О компании</h2>
+        <h2 hidden>О компании</h2>
         <p class="company-info">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br> превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <p class="company-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br> превыше креатива. Работаем не покладая рук, как роботы.</p>
         <h3>Выполняем заказы на разработку:</h3>
         <ul class="company-list">
           <li class="company-item">Веб-сайтов любой сложности</li>
@@ -116,10 +116,10 @@
     </div>
 
       <section class="clients">
-        <h2>Клиенты</h2>
+        <h2 hidden>Клиенты</h2>
         <ul class="clients-list">
           <li class="clients-item">
-            <a href="blank.html"><img src="img/clients/logo_htmlacademy.svg" width="199" height="57" alt="Логотип htmlacademy"></a>
+            <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/clients/logo_htmlacademy.svg" width="199" height="57" alt="Логотип htmlacademy"></a>
           </li>
           <li class="clients-item">
             <a href="blank.html"><img src="img/clients/logo-borodinski.png" width="209" height="90" alt="Логотип барбершопа BORODINSKI"></a>
@@ -139,28 +139,27 @@
   <footer class="main-footer">
     <div class="container">
     <section class="contacts">
-      <h2>Контакты</h2>
+      <h2 hidden>Контакты</h2>
       <h3>NЁRDS DESIGN STUDIO</h3>
-      <p>наб. Реки Карповки,<br>
-         5 лит П, Санкт-Петербург<br>
-        <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a><br>
-        <a class="button button-contacts" href="blank.html">Напишите нам</a>
-      </p>
-      <!-- Здесь будет карта -->
+      <p class="contacts-address">наб. Реки Карповки,<br>
+        5 лит П, Санкт-Петербург</p>
+      <p class="contacts-phones"><a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
+      <a class="button button-contacts" href="blank.html">Напишите нам</a>
     </section>
+      <!-- Здесь будет карта -->
 
     <div class="footer-columns">
     <section class="footer-social">
-      <h2>Давайте дружить!</h2>
+      <h2 hidden>Давайте дружить!</h2>
       <ul class="social-list">
         <li class="social-item">
-          <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Логотип Вконтакте">Вконтакте</a>
+          <a class="social-button" href="#">Вконтакте</a>
         </li>
         <li class="social-item">
-          <a class="social-button" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Фейсбук">Фейсбук</a>
+          <a class="social-button" href="#">Фейсбук</a>
         </li>
         <li class="social-item">
-          <a class="social-button" href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Логотип Инстаграм">Инстаграм</a>
+          <a class="social-button" href="#">Инстаграм</a>
         </li>
       </ul>
     </section>
