Добавление сетки на флексах на страницу каталога

--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
 
       <div class="page-catalog container">
       <section class="filters">
-        <h2>Фильтр товаров</h2>
+        <h2 hidden>Фильтр товаров</h2>
         <form class="filter" method="get" action="https://echo.htmlacademy.ru">
           <fieldset>
             <legend class="filter-group">Стоимость:</legend>
@@ -116,7 +116,7 @@
     </section>
 
       <section class="templates">
-        <h2>Список шаблонов</h2>
+        <h2 hidden>Список шаблонов</h2>
         <ul class="template-list">
           <li class="template-item">
             <div class="template-item-description">
@@ -202,13 +202,12 @@
       <section class="contacts">
         <h2>Контакты</h2>
         <h3>NЁRDS DESIGN STUDIO</h3>
-        <p>наб. Реки Карповки,<br>
-           5 лит П, Санкт-Петербург<br>
-          <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a><br>
-          <a class="button button-contacts" href="blank.html">Напишите нам</a>
-        </p>
-        <!-- Здесь будет карта -->
+        <p class="contacts-address">наб. Реки Карповки,<br>
+          5 лит П, Санкт-Петербург</p>
+        <p class="contacts-phones"><a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
+        <a class="button button-contacts" href="blank.html">Напишите нам</a>
       </section>
+        <!-- Здесь будет карта -->
 
       <div class="footer-columns">
       <section class="footer-social">
