добавила отступы в фильтрах

--- a/catalog.html
+++ b/catalog.html
@@ -121,8 +121,8 @@
           <li class="template-item">
             <div class="template-item-description">
               <a class="template-item-title" href="blank.html"><h3>Sedona</h3></a>
-              <p class="info-site">Информационный сайт для туристов</p>
-              <a class="button" href="blank.html">9 900 ₽</a>
+              <p class="info-site">Информационный сайт<br> для туристов</p>
+              <a class="button template-button" href="blank.html">9 900 ₽</a>
             </div>
             <p class="template-item-image">
               <img src="img/catalog/sedona.png" width="358" height="578" alt="Sedona Информационный сайт для туристов">
@@ -131,8 +131,8 @@
           <li class="template-item">
             <div class="template-item-description">
               <a class="template-item-title" href="blank.html"><h3>Pink App</h3></a>
-              <p class="info-site">Продуктовый лендингприложения для iOS и Android</p>
-              <a class="button" href="blank.html">9 900 ₽</a>
+              <p class="info-site">Продуктовый лендинг<br>приложения для iOS и Android</p>
+              <a class="button template-button" href="blank.html">9 900 ₽</a>
             </div>
               <p class="template-item-image">
                 <img src="img/catalog/pink.png" width="358" height="578" alt="Pink App Продуктовый лендингприложения для iOS и Android">
@@ -141,8 +141,8 @@
           <li class="template-item">
             <div class="template-item-description">
               <a class="template-item-title" href="blank.html"><h3>Barbershop</h3></a>
-              <p class="info-site">Сайт салона красоты.Для мужчин, да.</p>
-              <a class="button" href="blank.html">9 900 ₽</a>
+              <p class="info-site">Сайт салона красоты.<br>Для мужчин, да.</p>
+              <a class="button template-button" href="blank.html">9 900 ₽</a>
             </div>
               <p class="template-item-image">
                 <img src="img/catalog/barbershop.png" width="358" height="578" alt="Barbershop Сайт салона красоты. Для мужчин, да.">
@@ -151,8 +151,8 @@
           <li class="template-item">
             <div class="template-item-description">
               <a class="template-item-title" href="blank.html"><h3>MISHKA</h3></a>
-              <p class="info-site">Интернет-магазин вязаных игрушек</p>
-              <a class="button" href="blank.html">9 900 ₽</a>
+              <p class="info-site">Интернет-магазин<br> вязаных игрушек</p>
+              <a class="button template-button" href="blank.html">9 900 ₽</a>
             </div>
               <p class="template-item-image">
                 <img src="img/catalog/mishka.png" width="358" height="578" alt="MISHKA Интернет-магазин вязаных игрушек">
@@ -161,8 +161,8 @@
           <li class="template-item">
             <div class="template-item-description">
               <a class="template-item-title" href="blank.html"><h3>A Plus</h3></a>
-              <p class="info-site">Лендинг курсов повышения квалификации</p>
-              <a class="button" href="blank.html">9 900 ₽</a>
+              <p class="info-site">Лендинг курсов повышения<br> квалификации</p>
+              <a class="button template-button" href="blank.html">9 900 ₽</a>
             </div>
               <p class="template-item-image">
                 <img src="img/catalog/aplus.png" width="358" height="578" alt="A Plus Лендинг курсов повышения квалификации">
@@ -171,8 +171,8 @@
           <li class="template-item">
             <div class="template-item-description">
               <a class="template-item-title" href="blank.html"><h3>КВАСТ</h3></a>
-              <p class="info-site">Промо-сайт производителякрафтового кваса</p>
-              <a class="button" href="blank.html">9 900 ₽</a>
+              <p class="info-site">Промо-сайт производителя<br>крафтового кваса</p>
+              <a class="button template-button" href="blank.html">9 900 ₽</a>
             </div>
               <p class="template-item-image">
                 <img src="img/catalog/kvast.png" width="358" height="578" alt="КВАСТ Промо-сайт производителя крафтового кваса">
@@ -200,7 +200,7 @@
     <footer class="main-footer">
       <div class="container">
       <section class="contacts">
-        <h2>Контакты</h2>
+        <h2 hidden>Контакты</h2>
         <h3>NЁRDS DESIGN STUDIO</h3>
         <p class="contacts-address">наб. Реки Карповки,<br>
           5 лит П, Санкт-Петербург</p>
@@ -211,16 +211,16 @@
 
       <div class="footer-columns">
       <section class="footer-social">
-        <h2>Давайте дружить!</h2>
+        <h2 hidden>Давайте дружить!</h2>
         <ul class="social-list">
           <li class="social-item">
-            <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Логотип Вконтакте">Вконтакте</a>
+            <a class="social-button" href="#">Вконтакте</a>
           </li>
           <li class="social-item">
-            <a class="social-button" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Фейсбук">Фейсбук</a>
+            <a class="social-button" href="#">Фейсбук</a>
           </li>
           <li class="social-item">
-            <a class="social-button" href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Логотип Инстаграм">Инстаграм</a>
+            <a class="social-button" href="#">Инстаграм</a>
           </li>
         </ul>
       </section>
