Добавила стили для скрытия заголовков со страницы.

--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
 
       <div class="page-catalog container">
       <section class="filters">
-        <h2 hidden>Фильтр товаров</h2>
+        <h2 class="visually-hidden">Фильтр товаров</h2>
         <form class="filter" method="get" action="https://echo.htmlacademy.ru">
           <fieldset>
             <legend class="filter-group">Стоимость:</legend>
@@ -116,7 +116,7 @@
     </section>
 
       <section class="templates">
-        <h2 hidden>Список шаблонов</h2>
+        <h2 class="visually-hidden">Список шаблонов</h2>
         <ul class="template-list">
           <li class="template-item">
             <div class="template-item-description">
@@ -200,7 +200,7 @@
     <footer class="main-footer">
       <div class="container">
       <section class="contacts">
-        <h2 hidden>Контакты</h2>
+        <h2 class="visually-hidden">Контакты</h2>
         <h3>NЁRDS DESIGN STUDIO</h3>
         <p class="contacts-address">наб. Реки Карповки,<br>
           5 лит П, Санкт-Петербург</p>
@@ -211,7 +211,7 @@
 
       <div class="footer-columns">
       <section class="footer-social">
-        <h2 hidden>Давайте дружить!</h2>
+        <h2 class="visually-hidden">Давайте дружить!</h2>
         <ul class="social-list">
           <li class="social-item">
             <a class="social-button" href="#">Вконтакте</a>
