--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <main>
       <div class="main-features">
         <div class="container">
-          <h1 hidden>Дизайн-студия «Nёrd's»</h1>
+          <h1 class="visually-hidden">Дизайн-студия «Nёrd's»</h1>
 
           <section class="features">
-            <h2 hidden>Преимущества</h2>
+            <h2 class="visually-hidden">Преимущества</h2>
             <ul class="features-list">
               <li class="feature-item">
                 <h3>Долго, дорого, скрупулезно.</h3>
@@ -64,7 +64,7 @@
 
       <div class="container">
       <section class="services">
-        <h2 hidden>Услуги</h2>
+        <h2 class="visually-hidden">Услуги</h2>
         <ul class="services-list">
         <li class="services-item">
           <img src="img/laptop.png" width="300" height="146" alt="Ноутбук на красном фоне">
@@ -89,7 +89,7 @@
 
       <div class="index-column">
       <section class="company">
-        <h2 hidden>О компании</h2>
+        <h2 class="visually-hidden">О компании</h2>
         <p class="company-info">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
         <p class="company-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br> превыше креатива. Работаем не покладая рук, как роботы.</p>
         <h3>Выполняем заказы на разработку:</h3>
@@ -116,7 +116,7 @@
     </div>
 
       <section class="clients">
-        <h2 hidden>Клиенты</h2>
+        <h2 class="visually-hidden">Клиенты</h2>
         <ul class="clients-list">
           <li class="clients-item">
             <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/clients/logo_htmlacademy.svg" width="199" height="57" alt="Логотип htmlacademy"></a>
@@ -139,7 +139,7 @@
   <footer class="main-footer">
     <div class="container">
     <section class="contacts">
-      <h2 hidden>Контакты</h2>
+      <h2 class="visually-hidden">Контакты</h2>
       <h3>NЁRDS DESIGN STUDIO</h3>
       <p class="contacts-address">наб. Реки Карповки,<br>
         5 лит П, Санкт-Петербург</p>
@@ -150,7 +150,7 @@
 
     <div class="footer-columns">
     <section class="footer-social">
-      <h2 hidden>Давайте дружить!</h2>
+      <h2 class="visually-hidden">Давайте дружить!</h2>
       <ul class="social-list">
         <li class="social-item">
           <a class="social-button" href="#">Вконтакте</a>
