--- a/index.html
+++ b/index.html
@@ -39,25 +39,27 @@
           <section class="features">
             <h2 class="visually-hidden">Преимущества</h2>
             <ul class="features-list">
-              <li class="feature-item">
-                <h3>Долго, дорого, скрупулезно.</h3>
-                <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-                <a class="button" href="blank.html">Узнать больше</a>
-                  <img src="img/slides/three-iPhones.png" width="760" height="431" alt="Три iPhones">
+              <li class="feature-item feature-item-1 slide slide-current">
+                <h3>Долго, дорого,<br>скрупулезно.</h3>
+                <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
+                <a class="button slide-button" href="blank.html">Узнать больше</a>
               </li>
-              <li class="feature-item">
-                <h3>Любим математику как никто другой</h3>
-                <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-                <a class="button" href="blank.html">Узнать больше</a>
-                  <img src="img/slides/two-MAC-screens.png" width="760" height="431" alt="Два экрана MAC">
+              <li class="feature-item feature-item-2 slide">
+                <h3>Любим математику<br>как никто другой</h3>
+                <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций</p>
+                <a class="button slide-button" href="blank.html">Узнать больше</a>
               </li>
-              <li class="feature-item">
-                <h3>Только ночь, только хардкор</h3>
-                <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-                <a class="button" href="blank.html">Узнать больше</a>
-                  <img src="img/slides/tablet-and-iPhone.png" width="760" height="431" alt="Планшет и iPhone">
+              <li class="feature-item feature-item-3 slide">
+                <h3>Только ночь,<br>только хардкор</h3>
+                <p>Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
+                <a class="button slide-button" href="blank.html">Узнать больше</a>
               </li>
             </ul>
+            <div class="slider-controls">
+              <button class="current" type="button" aria-label="Первый слайд"></button>
+              <button type="button" aria-label="Второй слайд"></button>
+              <button type="button" aria-label="Третий слайд"></button>
+            </div>
           </section>
         </div>
       </div>
