--- a/catalog.html
+++ b/catalog.html
@@ -52,15 +52,15 @@
             <legend class="filter-group">Сетка:</legend>
             <ul>
               <li class="filter-option filter-radio">
-                <input class="filter-input-radio filter-input" type="radio" name="grid-types" value="adaptive" id="filter-adaptive" checked>
+                <input class="visually-hidden filter-input-radio filter-input" type="radio" name="grid-types" value="adaptive" id="filter-adaptive" checked>
                 <label for="filter-adaptive">Адаптивная</label>
               </li>
               <li class="filter-option filter-radio">
-                <input class="filter-input-radio filter-input" type="radio" name="grid-types" value="fixed" id="filter-fixed">
+                <input class="visually-hidden filter-input-radio filter-input" type="radio" name="grid-types" value="fixed" id="filter-fixed">
                 <label for="filter-fixed">Фиксированная</label>
               </li>
               <li class="filter-option filter-radio">
-                <input class="filter-input-radio filter-input" type="radio" name="grid-types" value="rubber" id="filter-rubber">
+                <input class="visually-hidden filter-input-radio filter-input" type="radio" name="grid-types" value="rubber" id="filter-rubber">
                 <label for="filter-rubber">Резиновая</label>
               </li>
             </ul>
@@ -69,23 +69,23 @@
             <legend class="filter-group">Особенности:</legend>
             <ul>
               <li class="filter-option filter-checkbox">
-                <input class="filter-input-checkbox filter-input" type="checkbox" name="slider" id="filter-slider" checked>
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="slider" id="filter-slider" checked>
                 <label for="filter-slider">Слайдер</label>
               </li>
               <li class="filter-option filter-checkbox">
-                <input class="filter-input-checkbox filter-input" type="checkbox" name="benefits-block" id="filter-benefits-block">
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="benefits-block" id="filter-benefits-block">
                 <label for="filter-benefits-block">Блок преимуществ</label>
               </li>
               <li class="filter-option filter-checkbox">
-                <input class="filter-input-checkbox filter-input" type="checkbox" name="news" id="filter-news" checked>
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="news" id="filter-news" checked>
                 <label for="filter-news">Новости</label>
               </li>
               <li class="filter-option filter-checkbox">
-                <input class="filter-input-checkbox filter-input" type="checkbox" name="gallery" id="filter-gallery">
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="gallery" id="filter-gallery">
                 <label for="filter-gallery">Галерея</label>
               </li>
               <li class="filter-option filter-checkbox">
-                <input class="filter-input-checkbox filter-input" type="checkbox" name="basket" id="filter-basket">
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="basket" id="filter-basket">
                 <label for="filter-basket">Корзина</label>
               </li>
             </ul>
